--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+
+# markdown files
+./src/markdowns/tech/
+./src/markdowns/love/
+./src/markdowns/about_me/
