--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@astrojs/react": "^4.4.2",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
-    "astro": "^5.16.15",
+    "astro": "^5.17.1",
+    "date-fns": "^4.1.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   },
