--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-dom": "^19.2.3",
     "astro": "^5.17.1",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "prettier": "3.8.1",
