--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^19.2.3",
     "astro": "^5.17.1",
     "date-fns": "^4.1.0",
+    "lightningcss": "^1.31.1",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
