--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,16 +1,16 @@
 {
 	"main": "dist/_worker.js/index.js",
-	"name": "",
-  "compatibility_date": "2026-02-14",
-  "compatibility_flags": [
-    "nodejs_compat",
-    "global_fetch_strictly_public"
-  ],
+	"name": "my-astro-blog",
+	"compatibility_date": "2026-02-14",
+	"compatibility_flags": [
+		"nodejs_compat",
+		"global_fetch_strictly_public"
+	],
 	"assets": {
 		"binding": "ASSETS",
 		"directory": "./dist"
 	},
 	"observability": {
-    "enabled": true
-  }
+		"enabled": true
+	}
 }
